--- a/data_eda.ipynb
+++ b/data_eda.ipynb
@@ -2998,12 +2998,38 @@
    "execution_count": 139
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-08T02:22:56.741359Z",
+     "start_time": "2025-05-08T02:22:56.736028Z"
+    }
+   },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "# Save the encoded dataframe as a pickle file\n",
+    "import os\n",
+    "\n",
+    "# Define the directory\n",
+    "directory = 'encoded_data'\n",
+    "\n",
+    "# Check if the directory exists, if not, create it\n",
+    "if not os.path.exists(directory):\n",
+    "    os.makedirs(directory)\n",
+    "\n",
+    "# Save the encoded dataframe as a pickle file inside the 'data' directory\n",
+    "df_encoded.to_pickle(os.path.join(directory, 'encoded_data.pkl'))"
+   ],
    "id": "1bb4fa274490b0b",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 144
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "8318c3f38d9ba801"
   }
  ],
  "metadata": {
